Added the scroll view and its content view

--- a/casadocodigo/Interface/Base.lproj/Main.storyboard
+++ b/casadocodigo/Interface/Base.lproj/Main.storyboard
@@ -60,13 +60,34 @@
                                     <constraint firstAttribute="height" constant="60" id="YOH-Wk-PgF"/>
                                 </constraints>
                             </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wL5-4V-VGG">
+                                <rect key="frame" x="0.0" y="104" width="428" height="788"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vPI-FD-avp" userLabel="Content View">
+                                        <rect key="frame" x="0.0" y="0.0" width="428" height="788"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="vPI-FD-avp" firstAttribute="leading" secondItem="wL5-4V-VGG" secondAttribute="leading" id="8yi-PH-tbv"/>
+                                    <constraint firstAttribute="bottom" secondItem="vPI-FD-avp" secondAttribute="bottom" id="9R4-T0-l3e"/>
+                                    <constraint firstItem="vPI-FD-avp" firstAttribute="centerX" secondItem="wL5-4V-VGG" secondAttribute="centerX" id="NV4-O8-jlw"/>
+                                    <constraint firstAttribute="trailing" secondItem="vPI-FD-avp" secondAttribute="trailing" id="kEo-pF-Dfn"/>
+                                    <constraint firstItem="vPI-FD-avp" firstAttribute="centerY" secondItem="wL5-4V-VGG" secondAttribute="centerY" priority="250" id="kUN-Tv-Bgn"/>
+                                    <constraint firstItem="vPI-FD-avp" firstAttribute="top" secondItem="wL5-4V-VGG" secondAttribute="top" id="uzj-Na-ItX"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="fI2-dw-3sn"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="fI2-dw-3sn" firstAttribute="trailing" secondItem="wL5-4V-VGG" secondAttribute="trailing" id="0NQ-XD-zSf"/>
+                            <constraint firstItem="fI2-dw-3sn" firstAttribute="bottom" secondItem="wL5-4V-VGG" secondAttribute="bottom" id="57w-cL-CjK"/>
                             <constraint firstItem="MVs-LO-GKU" firstAttribute="trailing" secondItem="fI2-dw-3sn" secondAttribute="trailing" id="PqZ-Q8-QlW"/>
+                            <constraint firstItem="wL5-4V-VGG" firstAttribute="top" secondItem="MVs-LO-GKU" secondAttribute="bottom" id="aTn-dO-fFJ"/>
                             <constraint firstItem="MVs-LO-GKU" firstAttribute="top" secondItem="fI2-dw-3sn" secondAttribute="top" id="deo-4l-F54"/>
                             <constraint firstItem="MVs-LO-GKU" firstAttribute="leading" secondItem="fI2-dw-3sn" secondAttribute="leading" id="uuP-fx-bX0"/>
+                            <constraint firstItem="wL5-4V-VGG" firstAttribute="leading" secondItem="fI2-dw-3sn" secondAttribute="leading" id="zYx-zR-cBv"/>
                         </constraints>
                     </view>
                     <connections>
@@ -75,7 +96,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Y7-Tp-nQ9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2606" y="292"/>
+            <point key="canvasLocation" x="-2606.0747663551401" y="291.57667386609074"/>
         </scene>
         <!--Book Details-->
         <scene sceneID="Cep-kr-hIY">
